--- a/package.json
+++ b/package.json
@@ -7,5 +7,15 @@
     "express": "~4.17.0",
     "method-override": "~3.0.0",
     "mongoose": "~5.2.0"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.4",
+    "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-jshint": "^2.1.0",
+    "grunt-contrib-less": "^2.0.0",
+    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-nodemon": "^0.4.2"
   }
 }
