--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "grunt": "^1.0.4",
+    "grunt-cli": "^1.3.2",
     "grunt-concurrent": "^2.3.1",
     "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-jshint": "^2.1.0",
