--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt": "^1.0.4",
     "grunt-cli": "^1.3.2",
     "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-jshint": "^2.1.0",
     "grunt-contrib-less": "^2.0.0",
